# PythonProtector

./: .gitattributes  .gitignore  404.html  AUTHORS.md  HISTORY.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
code_of_conduct/: index.html
configuration/Events/: index.html
configuration/Modules/Anti Analysis/: index.html
configuration/Modules/Anti DLL/: index.html
configuration/Modules/Anti Dump/: index.html
configuration/Modules/Anti Process/: index.html
configuration/Modules/Anti VM/: index.html
configuration/Modules/Miscellaneous/: index.html
configuration/PythonProtector/: index.html
data/: gpu_list.txt  hwid_list.txt  ip_list.txt  mac_list.txt  pc_name_list.txt  pc_username_list.txt
docs/: code_of_conduct.md  faq.md  index.md  installation.md  release.md
examples/: keyauth.py  main.py  protector.py
examples/ext/: mixed.py
faq/: index.html
installation/: index.html
license/: index.html
pyprotector/: __init__.py  abc.py  constants.py  protector.py  types.py
pyprotector/keyauth/: __init__.py  _constants.py  exceptions.py  keyauth.py  models.py  seller.py  utils.py
pyprotector/modules/: __init__.py  analysis.py  antiprocess.py  antivm.py  dll.py  dlls.py  dump.py  miscellaneous.py  process.py  vm.py
pyprotector/utils/: events.py  exceptions.py  http.py  webhook.py  windows.py
release/: index.html
scripts/: format.sh
search/: search_index.json
(+21 files in other folders)
